--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
+    <meta name="description" content="Sajjad Hashemian personal website." />
+
     <script>
       function applyTheme() {
         const isLight =
