improve page load

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Londrina+Sketch&family=Londrina+Solid&display=swap"
-      rel="stylesheet"
+      as="style"
     />
 
     <script>
@@ -32,7 +34,11 @@
       applyTheme();
     </script>
 
-    <script type="module" src="/src/main.ts"></script>
+    <script async type="module" src="/src/main.ts"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Londrina+Sketch&family=Londrina+Solid&display=swap"
+      rel="stylesheet"
+    />
 
     <noscript>
       <style>
