--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link
+      rel="preload"
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Londrina+Sketch&family=Londrina+Solid&display=swap"
-      rel="stylesheet"
+      as="style"
     />
 
     <script>
@@ -42,7 +43,12 @@
       applyTheme();
     </script>
 
-    <script async type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Londrina+Sketch&family=Londrina+Solid&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div>
