--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       applyTheme();
     </script>
 
-    <script type="module" src="/src/main.ts"></script>
+    <script async type="module" src="/src/main.ts"></script>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Londrina+Sketch&family=Londrina+Solid&display=swap"
