optimize page load

--- a/index.html
+++ b/index.html
@@ -22,14 +22,7 @@
 
     <meta name="description" content="Sajjad Hashemian personal website." />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-    <link
-      rel="preload"
-      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Londrina+Sketch&family=Londrina+Solid&display=swap"
-      as="style"
-    />
+    <!--__vite-plugin-inject-preload__-->
 
     <script>
       function applyTheme() {
@@ -44,11 +37,6 @@
     </script>
 
     <script type="module" src="/src/main.ts"></script>
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Londrina+Sketch&family=Londrina+Solid&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <div>
