--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!--
-<%
+<% //<!--
   function split(txt) {
     return txt
       .split(" ")
       .map((w) => `<span><span>${w}</span></span>`)
       .join(" ");
   }
+//!-->
 %>
-?-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -36,7 +35,7 @@
       applyTheme();
     </script>
 
-    <script type="module" src="/src/main.ts"></script>
+    <script async type="module" src="/src/main.ts"></script>
   </head>
   <body>
     <div>
