--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <body>
     <div>
       <h1><%- split("Sajjad Hashemian"); %></h1>
-      <p><%- split("Fullstack web and web3 developer"); %></p>
+      <p><%- split("Creative Fullstack Developer"); %></p>
       <ul>
         <li>
           <a href="https://github.com/sijad/" target="_blank">
